2009-05-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.48

	* src/util/hd-dbus.c (hd_dbus_init): No need to use g_strdup_printf
	for static strings.

2009-05-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#106183 Desktop shortcut moves place after UI has been rotated

	* src/mb/hd-home-applet.c (hd_home_applet_init):
	  Don't allow libmatchbox' layout manager to reposition applets
	  freely whenever it thinks they should be.  In particular when
	  the root window geometry changes, because it thinks they get
	  out of bound, which is fair but then it cannot place them to
	  their original position.

2009-05-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (hd_task_navigator_remove_window):
	  Don't forget to release_win() if the navigator is not active.
	  This has gained significance since now the dialogs are not
	  automatically destroyed along with the application client,
	  and in this case they must be returned to the render manager.
	  This is related with NB#109299.

2009-05-08  Gordon Williams <gordon.williams@collabora.co.uk>

	Changes to allow applets to fade out nicely on state changes rather
	than just disappearing/reappearing.

	* src/home/hd-render-manager.h: Added STATE_TOOLBAR_FOREGROUND to
	  allow the toolbar to be raised above task nav/launcher and set 
	  applets not to be visible in app mode (so applets do not fade
	  out as task nav zooms out)
	* src/home/hd-render-manager.c: Moved STATE_HOME_FRONT code into
	  sync_clutter_before where other clutter ordering code is. Added
	  extra blur/zoom values for applets. Moved blur_front behind
	  task_nav/launcher in order to stop applets fading out from in
	  front of them.

2009-05-08  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home-view.c: Added non-linear panning of the home view
	  applets relative to the background

2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/main.c (mbver):