@@ -1,5 +1,10 @@
 2009-05-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
+	* src/home/hd-render-manager.c
+	(hd_render_manager_sync_clutter_before): Silence Coverity by replacing
+	the switch for visible_top_right with a simpler if clause (without
+	non-reachable 'default' branch).
+
 	Release 2.2.48
 
 	* src/util/hd-dbus.c (hd_dbus_init): No need to use g_strdup_printf
